[gd_scene load_steps=8 format=3 uid="uid://bmx43d810nw2a"]

[ext_resource type="Script" path="res://minigames/counting/falling_decimals_0_to_2/number.gd" id="1_u2yf2"]
[ext_resource type="Texture2D" uid="uid://wpjk8gv7allc" path="res://minigames/counting/falling_decimals_0_to_2/assets/number_box.png" id="2_sssnw"]
[ext_resource type="Texture2D" uid="uid://bgjbbarksour7" path="res://minigames/counting/falling_decimals_0_to_2/assets/number_box_slct.png" id="3_h5j87"]
[ext_resource type="Texture2D" uid="uid://bjq5rlnhbp20t" path="res://minigames/counting/falling_decimals_0_to_2/assets/number_box_find.png" id="4_w271b"]
[ext_resource type="Texture2D" uid="uid://c5csinylvsknd" path="res://minigames/counting/falling_decimals_0_to_2/assets/number_box_equal.png" id="5_7us4t"]
[ext_resource type="Texture2D" uid="uid://pqa23judwvx2" path="res://minigames/counting/falling_decimals_0_to_2/assets/number_box_unequal.png" id="6_7mpqq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6ckqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sssnw")
}, {
"duration": 1.0,
"texture": ExtResource("3_h5j87")
}, {
"duration": 1.0,
"texture": ExtResource("4_w271b")
}, {
"duration": 1.0,
"texture": ExtResource("5_7us4t")
}, {
"duration": 1.0,
"texture": ExtResource("6_7mpqq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Number" type="Node2D"]
script = ExtResource("1_u2yf2")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6ckqd")

[node name="ExitTimer" type="Timer" parent="."]

[node name="MouseDetector" type="Area2D" parent="."]

[node name="MouseDet" type="CollisionPolygon2D" parent="MouseDetector"]
polygon = PackedVector2Array(-45, -34, -45, 19, -15, 19, 0, 34, 15, 19, 45, 19, 45, -34)

[node name="TickDetector" type="Area2D" parent="."]

[node name="TickDet" type="CollisionPolygon2D" parent="TickDetector"]
